--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -206,6 +206,9 @@
 									<li>
 										<a th:href="@{/customer/toPerson}">个人中心</a>
 									</li>
+									<li>	
+										<a th:href="@{/customer/toOrders}">订单管理</a>
+									</li>
 								</ul>
 							</nav>
 							<!-- // SITE NAVIGATION MENU -->
