--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Single</title>
+<title>菜单详情</title>
 <meta charset="utf-8">
 <link th:href="@{/css1/bootstrap.css}" rel='stylesheet' type='text/css' />
 <script type="text/javascript" th:src="@{/js1/jquery.min.js}"></script>
