--- a/src/main/resources/static/css1/minified.css
+++ b/src/main/resources/static/css1/minified.css
@@ -7132,7 +7132,7 @@ button.close {
 
 @media screen and (min-width:768px) {
 	.modal-dialog {
-		width: 600px;
+		/* width: 600px; */
 		padding-top: 30px;
 		padding-bottom: 30px
 	}
