--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -44,15 +44,15 @@
 								<!-- // CONTACT INFO -->
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-5">
-								<ul class="actions unstyled clearfix" style="height:40px;">
-									<li style="height:30px">
+								<ul class="actions unstyled clearfix">
+									<li>
 										<!-- SEARCH BOX -->
 										<div class="search-box">
 											<form action="#" method="post">
 												<div class="input-iconed prepend">
 													<button class="input-icon"><i class="iconfont-search"></i></button>
 													<label for="input-search" class="placeholder">在这里搜索</label>
-													<input type="text" name="q" id="input-search" style="height:30px;border-radius: 10px 10px;" class="round-input full-width" required />
+													<input type="text" name="q" id="input-search" class="round-input full-width" required />
 												</div>
 											</form>
 										</div>
@@ -155,6 +155,9 @@
 									<li>
 										<a th:href="@{/customer/toPerson}">个人中心</a>
 									</li>
+									<li>	
+										<a th:href="@{/customer/toOrders}">订单管理</a>
+									</li>
 								</ul>
 							</nav>
 							<!-- // SITE NAVIGATION MENU -->
@@ -163,7 +166,7 @@
 				</div>
 				<!-- // MAIN HEADER -->
 			</header>
-				<!-- BREADCRUMB -->
+			
 		<div class="breadcrumb-container">
 			<div class="container">
 				<div class="relative">
