--- a/src/main/resources/templates/productInfo.html
+++ b/src/main/resources/templates/productInfo.html
@@ -46,158 +46,145 @@
 </head>
 <body class="product-single">
 	
-		<header id="site-header" role="banner">
-		<!-- HEADER TOP -->
-		<div class="header-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-7">
-						<!-- CONTACT INFO -->
-						<div class="contact-info">
-							<i class="iconfont-headphones round-icon"></i>
-							<strong>+444 (100) 1234</strong>
-							<span>(周一- 周五: 09.00 - 21.00)</span>
+			<!--头部  -->
+			<header id="site-header" role="banner">
+				<!-- HEADER TOP -->
+				<div class="header-top">
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12 col-sm-6 col-md-7">
+								<!-- CONTACT INFO -->
+								<div class="contact-info">
+									<i class="iconfont-headphones round-icon"></i>
+									<strong>+444 (100) 1234</strong>
+									<span>(周一- 周五: 09.00 - 21.00)</span>
+								</div>
+								<!-- // CONTACT INFO -->
 							</div>
-						<!-- // CONTACT INFO -->
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-5">
-						<ul class="actions unstyled clearfix">
-							<li>
-								<!-- SEARCH BOX -->
-								<div class="search-box">
-									<form action="#" method="post">
-										<div class="input-iconed prepend">
-											<button class="input-icon"><i class="iconfont-search"></i></button>
-											<label for="input-search" class="placeholder">在这里搜索</label>
-											<input type="text" name="q" id="input-search" class="round-input full-width" required />
+							<div class="col-xs-12 col-sm-6 col-md-5">
+								<ul class="actions unstyled clearfix">
+									<li>
+										<!-- SEARCH BOX -->
+										<div class="search-box">
+											<form action="#" method="post">
+												<div class="input-iconed prepend">
+													<button class="input-icon"><i class="iconfont-search"></i></button>
+													<label for="input-search" class="placeholder">在这里搜索</label>
+													<input type="text" name="q" id="input-search" class="round-input full-width" required />
+												</div>
+											</form>
 										</div>
-									</form>
-								</div>
-								<!-- // SEARCH BOX -->
-							</li>
-							<li data-toggle="sub-header" data-target="#sub-social">
-								<!-- SOCIAL ICONS -->
-								<a href="javascript:void(0);" id="social-icons">
-									<i class="iconfont-share round-icon"></i>
-								</a>
-								
-								<div id="sub-social" class="sub-header">
-									<ul class="social-list unstyled text-center">
-										<li><a href="#"><i class="iconfont-facebook round-icon"></i></a></li>
-										<li><a href="#"><i class="iconfont-twitter round-icon"></i></a></li>
-										<li><a href="#"><i class="iconfont-google-plus round-icon"></i></a></li>
-										<li><a href="#"><i class="iconfont-pinterest round-icon"></i></a></li>
-										<li><a href="#"><i class="iconfont-rss round-icon"></i></a></li>
-									</ul>
-								</div>
-								<!-- // SOCIAL ICONS -->
-							</li>
-							<li data-toggle="sub-header" data-target="#sub-cart">
-								<!-- SHOPPING CART -->
-								<a href="javascript:void(0);" id="total-cart">
-									<i class="iconfont-shopping-cart round-icon"></i>
-								</a>
-								
-								<div id="sub-cart" class="sub-header">
-									<div class="cart-header">
-										<span>你的购物车是空的</span>
-										<small><a href="cart.html">(See All)</a></small>
-									</div>
-									<ul class="cart-items product-medialist unstyled clearfix"></ul>
-									<div class="cart-footer">
-										<div class="cart-total clearfix">
-											<span class="pull-left uppercase">总计</span>
-											<span class="pull-right total">￥ 0</span>
-										</div>
-										<div class="text-right">
-											<a href="cart.html" class="btn btn-default btn-round view-cart">查看</a>
-										</div>
-									</div>
-								</div>
-								<!-- // SHOPPING CART -->
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			
-			<!-- ADD TO CART MESSAGE -->
-			<div class="cart-notification">
-				<ul class="unstyled"></ul>
-			</div>
-			<!-- // ADD TO CART MESSAGE -->
-		</div>
-		<!-- // HEADER TOP -->
-		<!-- MAIN HEADER -->
-		<div class="main-header-wrapper">
-			<div class="container">
-				<div class="main-header">
-					<!-- CURRENCY / LANGUAGE / USER MENU -->
-					<div class="actions">
-						<div class="center-xs">
-							<!-- CURRENCY -->
-							<ul class="option-list unstyled">
-								<li class="active"><a href="#" data-toggle="tooltip" title="人民币">￥</a></li>
-								<li><a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a></li>
-								<li><a href="#" data-toggle="tooltip" title="EUR - Euro">€</a></li>
-							</ul>
-							<!-- // CURRENCY -->
-							<!-- LANGUAGES -->
-							<ul class="option-list unstyled">
-								<li class="active"><a href="#" data-toggle="tooltip" title="中文">CH</a></li>
-								<li><a href="#" data-toggle="tooltip" title="French">FR</a></li>
-								<li><a href="#" data-toggle="tooltip" title="Deutsch">DE</a></li>
-							</ul>
-							<!-- // LANGUAGES -->
+										<!-- // SEARCH BOX -->
+									</li>
+									<li data-toggle="sub-header" data-target="#sub-cart">
+										<!-- SHOPPING CART -->
+										<a th:href="@{/customer/look}" id="total-cart">
+											<i class="iconfont-shopping-cart round-icon"></i>
+										</a>
+										<!-- // SHOPPING CART -->
+									</li>
+								</ul>
+							</div>
 						</div>
-						<div class="clearfix"></div>
-						<!-- USER RELATED MENU -->
-						<nav id="tiny-menu" class="clearfix">
-							<ul class="user-menu">
-								<li><a href="Person.html">我的账户</a></li>
-								<li><a href="Person.html">查看</a></li>
-								<li><a href="login-page.html">登出</a></li>
-							</ul>
-						</nav>
-						<!-- // USER RELATED MENU -->
 					</div>
-					<!-- // CURRENCY / LANGUAGE / USER MENU -->
-					<!-- SITE LOGO -->
-					<div class="logo-wrapper">
-						<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
-							<img th:src="@{/images/logo2.png}" alt="Logo" />
-						</a>
-					</div>
-					<!-- // SITE LOGO -->
-					<!-- SITE NAVIGATION MENU -->
-					<nav id="site-menu" role="navigation">
-						<ul class="main-menu hidden-sm hidden-xs">
-							<li class="active">
-								<a href="pagehome.html">首页</a>
-							</li>
-							<li>
-								<a href="productList.html">活动</a>
-							</li>
-							<li>
-								<a href="menu1.html">餐饮</a>
-							</li>
-							<li>
-								<a href="hotel.html">住宿</a>
-							</li>
-							
-							<li>	
-								<a href="Person.html">个人中心</a>
-							</li>
-						</ul>
 
-					</nav>
-					<!-- // SITE NAVIGATION MENU -->
+					<!-- ADD TO CART MESSAGE -->
+					<div class="cart-notification">
+						<ul class="unstyled"></ul>
+					</div>
+					<!-- // ADD TO CART MESSAGE -->
 				</div>
-			</div>
-		</div>
-		<!-- // MAIN HEADER -->
-	</header>
-	
+				<!-- // HEADER TOP -->
+				<!-- MAIN HEADER -->
+				<div class="main-header-wrapper">
+					<div class="container">
+						<div class="main-header">
+							<!-- CURRENCY / LANGUAGE / USER MENU -->
+							<div class="actions">
+								<div class="center-xs">
+									<!-- CURRENCY -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="人民币">￥</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="EUR - Euro">€</a>
+										</li>
+									</ul>
+									<!-- // CURRENCY -->
+									<!-- LANGUAGES -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="中文">CH</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="French">FR</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="Deutsch">DE</a>
+										</li>
+									</ul>
+									<!-- // LANGUAGES -->
+								</div>
+								<div class="clearfix"></div>
+								<!-- USER RELATED MENU -->
+								<nav id="tiny-menu" class="clearfix">
+									<ul class="user-menu">
+										<li>
+											<a th:href="@{/customer/toPerson}">我的账户</a>
+										</li>
+										<li>
+											<a th:href="@{/customer/toPerson}">查看</a>
+										</li>
+										<li>
+											<a th:href="@{/Login/back}">登出</a>
+										</li>
+									</ul>
+								</nav>
+								<!-- // USER RELATED MENU -->
+							</div>
+							<!-- // CURRENCY / LANGUAGE / USER MENU -->
+							<!-- SITE LOGO -->
+							<div class="logo-wrapper">
+								<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
+									<img th:src="@{/images/logo2.png}" alt="Logo" />
+								</a>
+							</div>
+							<!-- // SITE LOGO -->
+							<!-- SITE NAVIGATION MENU -->
+							<nav id="site-menu" role="navigation">
+								<ul class="main-menu hidden-sm hidden-xs">
+									<li class="active">
+										<a th:href="@{/customer/topagehome}">首页</a>
+									</li>
+									<li>
+										<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
+									</li>
+									<li>
+										<a th:href="@{/menu/toquerymenu1}">餐饮</a>
+									</li>
+									<li>
+										<a th:href="@{/room/toqueryqtroom}">住宿</a>
+									</li>
+
+									<li>
+										<a th:href="@{/customer/toPerson}">个人中心</a>
+									</li>
+									<li>	
+										<a th:href="@{/customer/toOrders}">订单管理</a>
+									</li>
+								</ul>
+							</nav>
+							<!-- // SITE NAVIGATION MENU -->
+						</div>
+					</div>
+				</div>
+				<!-- // MAIN HEADER -->
+			</header>
+		
     
 	<!-- PAGE WRAPPER -->
 <div id="page-wrapper">
@@ -520,7 +507,7 @@
 												<img th:src="@{/images/demo/images-footer.jpg}" alt="" />
 											</a>
 											<div class="ads-caption bottom-right">
-												<a href="#" class="btn btn-default btn-round">
+												<a href="#" class="btn  btn-round">
 													<i class="round-icon iconfont-angle-right"></i>
 													<span class="inline-middle">显示更多</span>
 												</a>
