--- a/src/main/resources/templates/HotelManager.html
+++ b/src/main/resources/templates/HotelManager.html
@@ -161,7 +161,7 @@
 					if(res==true){
 						$.ajax({
 							url:"/room/sjxj",
-							data:{"type":type,"id":id},
+							data:{"type":1,"id":id},
 							type:"post",
 							success:function(result){
 								alert(result);
@@ -181,7 +181,7 @@
 					if(res==true){
 						$.ajax({
 							url:"/room/sjxj",
-							data:{"type":type,"id":id},
+							data:{"type":2,"id":id},
 							type:"post",
 							success:function(result){
 								alert(result);
