--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -346,6 +346,9 @@
 													<li>
 														<a th:href="'/'+${item.pplist[0].pro.ilist[0].url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
 													</li>
+													<li>
+														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart lbshop" th:iid="${item.id}"></i></a>
+													</li>
 												</ul>
 												
 											</div>
